feature: Added report controller code: renamed response methods
